--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ sp-std = { version = "2.0.0-rc6", default-features = false, git = 'https://githu
 sp-sandbox = { version = "0.8.0-rc6", default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
 wasmi-validation = { version = "0.3.0", default-features = false }
 wat = { version = "1.0", optional = true, default-features = false }
+escrow-gateway-primitives = { version = '2.0.0-rc6', path = '../pallet-escrow-gateway/common', default-features = false}
 
 [dev-dependencies]
 assert_matches = "1.3.0"
