--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-contracts-primitives"
-version = "2.0.0-rc6"
+version = "2.0.0"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -14,8 +14,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 # This crate should not rely on any of the frame primitives.
 codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
-sp-runtime = { version = "2.0.0-rc6", default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
-sp-std = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
+sp-runtime = { version = "2.0.0", default-features = false  }
+sp-std = { version = "2.0.0", default-features = false }
 
 [features]
 default = ["std"]
