--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-contracts"
-version = "2.0.0-rc6"
+version = "2.0.0"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -14,28 +14,27 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 bitflags = "1.0"
 codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
-frame-benchmarking = { version = "2.0.0-rc6", default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
-frame-support = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
-frame-system = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
-pallet-contracts-primitives = { version = "2.0.0-rc6", default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
+frame-support = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git'}
+frame-system = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git'}
+pallet-contracts-primitives = { version = "2.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git'}
 parity-wasm = { version = "0.41.0", default-features = false }
 pwasm-utils = { version = "0.14.0", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
-sp-core = { version = "2.0.0-rc6", default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
-sp-runtime = { version = "2.0.0-rc6", default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
-sp-io = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
-sp-std = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
-sp-sandbox = { version = "0.8.0-rc6", default-features = false , git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6'}
+sp-core = { version = "2.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git'}
+sp-runtime = { version = "2.0.0", default-features = false , git = 'https://github.com/paritytech/substrate.git'}
+sp-io = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git'}
+sp-std = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git'}
+sp-sandbox = { version = "0.8.0", default-features = false , git = 'https://github.com/paritytech/substrate.git'}
 wasmi-validation = { version = "0.3.0", default-features = false }
 wat = { version = "1.0", optional = true, default-features = false }
-gateway-escrow-engine = { package = "gateway-escrow-engine", version = '2.0.0-rc6', git = 'https://github.com/t3rn/gateway-pallet.git', branch="master", default-features = false}
+gateway-escrow-engine = { package = "gateway-escrow-engine", version = '2.0.0', git = 'https://github.com/t3rn/gateway-pallet.git', branch="master", default-features = false}
 
 [dev-dependencies]
 assert_matches = "1.3.0"
 hex-literal = "0.2.1"
-pallet-balances = { version = "2.0.0-rc6" }
-pallet-timestamp = { version = "2.0.0-rc6" }
-pallet-randomness-collective-flip = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc6' }
+pallet-balances = { version = "2.0.0" }
+pallet-timestamp = { version = "2.0.0" }
+pallet-randomness-collective-flip = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git'}
 pretty_assertions = "0.6.1"
 wat = "1.0"
 
@@ -54,15 +53,6 @@ std = [
 	"parity-wasm/std",
 	"pwasm-utils/std",
 	"wasmi-validation/std",
-	"gateway-escrow-engine/std",
 	"pallet-contracts-primitives/std",
-]
-runtime-benchmarks = [
-	"frame-benchmarking",
-	"wat",
-	# We are linking the wat crate which uses std and therefore brings with it the
-	# std panic handler. Therefore we need to disable out own panic handlers. Mind that
-	# we still override the std memory allocator.
-	"sp-io/disable_panic_handler",
-	"sp-io/disable_oom",
+	"gateway-escrow-engine/std",
 ]
