--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 homepage = "https://substrate.dev"
 repository = "https://github.com/paritytech/substrate/"
 description = "FRAME pallet for WASM contracts"
+readme = "README.md"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
@@ -14,27 +15,28 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 bitflags = "1.0"
 codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
-serde = { version = "1.0.101", optional = true, features = ["derive"] }
-frame-support = { version = "2.0.0", default-features = false}
-frame-system = { version = "2.0.0", default-features = false}
-pallet-contracts-primitives = { version = "2.0.0", default-features = false , path = 'common'}
+frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
+frame-support = { version = "2.0.0", default-features = false }
+frame-system = { version = "2.0.0", default-features = false }
+pallet-contracts-primitives = { version = "2.0.0", default-features = false }
 parity-wasm = { version = "0.41.0", default-features = false }
 pwasm-utils = { version = "0.14.0", default-features = false }
+serde = { version = "1.0.101", optional = true, features = ["derive"] }
 sp-core = { version = "2.0.0", default-features = false }
 sp-runtime = { version = "2.0.0", default-features = false }
-sp-io = { version = "2.0.0", default-features = false}
-sp-std = { version = "2.0.0", default-features = false}
+sp-io = { version = "2.0.0", default-features = false }
+sp-std = { version = "2.0.0", default-features = false }
 sp-sandbox = { version = "0.8.0", default-features = false }
 wasmi-validation = { version = "0.3.0", default-features = false }
 wat = { version = "1.0", optional = true, default-features = false }
-gateway-escrow-engine = { package = "gateway-escrow-engine", version = '2.0.0', git = 'https://github.com/t3rn/gateway-pallet.git', branch="master", default-features = false}
+gateway-escrow-engine = { package = "gateway-escrow-engine", version = '2.0.0', path = '../pallet-escrow-gateway/escrow-engine', default-features = false}
 
 [dev-dependencies]
 assert_matches = "1.3.0"
-hex-literal = "0.2.1"
+hex-literal = "0.3.1"
 pallet-balances = { version = "2.0.0" }
 pallet-timestamp = { version = "2.0.0" }
-pallet-randomness-collective-flip = { version = "2.0.0"}
+pallet-randomness-collective-flip = { version = "2.0.0" }
 pretty_assertions = "0.6.1"
 wat = "1.0"
 
@@ -54,5 +56,13 @@ std = [
 	"pwasm-utils/std",
 	"wasmi-validation/std",
 	"pallet-contracts-primitives/std",
-	"gateway-escrow-engine/std",
+]
+runtime-benchmarks = [
+	"frame-benchmarking",
+	"wat",
+	# We are linking the wat crate which uses std and therefore brings with it the
+	# std panic handler. Therefore we need to disable out own panic handlers. Mind that
+	# we still override the std memory allocator.
+	"sp-io/disable_panic_handler",
+	"sp-io/disable_oom",
 ]
