--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ sp-std = { version = "2.0.0", default-features = false }
 sp-sandbox = { version = "0.8.0", default-features = false }
 wasmi-validation = { version = "0.3.0", default-features = false }
 wat = { version = "1.0", optional = true, default-features = false }
-gateway-escrow-engine = { package = "gateway-escrow-engine", version = '2.0.0', path = '../pallet-escrow-gateway/escrow-engine', default-features = false}
+gateway-escrow-engine = { package = "gateway-escrow-engine", version = '2.0.0', git = 'https://github.com/t3rn/gateway-pallet.git', branch="master", default-features = false}
 
 [dev-dependencies]
 assert_matches = "1.3.0"
